--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,12 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
+    <style name="EditTextStyle1" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textColorHint">#FF4A4650</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textColorLink">@color/white</item>
+    </style>
 
-
+    <style name="TextColor1"><item name="android:textColor">#000000</item></style>
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
 </resources>
