--- a/app/src/main/res/layout/activity_promo.xml
+++ b/app/src/main/res/layout/activity_promo.xml
@@ -6,25 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".Activity_Promo">
 
+    <View
+        android:id="@+id/view19"
+        style="@style/line1"
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
     <ImageView
         android:id="@+id/btn_DeletePromo_ActivityPromo"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toStartOf="@+id/btn_AddPromo_ActivityPromo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sub" />
+        app:srcCompat="@drawable/sub"
+        tools:layout_editor_absoluteY="60dp" />
 
     <ImageView
         android:id="@+id/btn_AddPromo_ActivityPromo"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/add" />
+        app:srcCompat="@drawable/add"
+        tools:layout_editor_absoluteY="60dp" />
 
     <ScrollView
         android:layout_width="0dp"
@@ -36,10 +43,41 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_DeletePromo_ActivityPromo">
 
         <LinearLayout
-            android:id="@+id/vb_ContentPromo_ActivityPromo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/vb_ContentPromo1_ActivityPromo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"/>
+
+                <LinearLayout
+                    android:id="@+id/vb_ContentPromo2_ActivityPromo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"/>
+            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="Promo"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
