--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,9 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textColorLink">@color/white</item>
     </style>
-
+    <style name="line1">
+        <item name="android:background">#C8C2CE</item>
+    </style>
     <style name="TextColor1"><item name="android:textColor">#000000</item></style>
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
 </resources>
