--- a/app/src/main/res/drawable/add.xml
+++ b/app/src/main/res/drawable/add.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="15dp"/>
-            <solid android:color="#304FFE"/>
+            <solid android:color="#0091EA"/>
         </shape>
     </item>
     <item android:drawable="@drawable/baseline_add_24" android:width="20dp" android:height="20dp"></item>
