--- a/app/src/main/res/layout/activity_promo.xml
+++ b/app/src/main/res/layout/activity_promo.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".Activity_Promo">
 
     <View
@@ -16,31 +17,22 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <ImageView
-        android:id="@+id/btn_DeletePromo_ActivityPromo"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_AddPromo_ActivityPromo"
-        app:srcCompat="@drawable/sub"
-        tools:layout_editor_absoluteY="60dp" />
-
-    <ImageView
         android:id="@+id/btn_AddPromo_ActivityPromo"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/add"
-        tools:layout_editor_absoluteY="60dp" />
+        app:layout_constraintTop_toBottomOf="@+id/view19"
+        app:srcCompat="@drawable/add" />
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_DeletePromo_ActivityPromo">
+        app:layout_constraintTop_toBottomOf="@+id/btn_AddPromo_ActivityPromo">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,13 +49,13 @@
                     android:id="@+id/vb_ContentPromo1_ActivityPromo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical" />
 
                 <LinearLayout
                     android:id="@+id/vb_ContentPromo2_ActivityPromo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
