--- a/app/src/main/res/layout/content_promo.xml
+++ b/app/src/main/res/layout/content_promo.xml
@@ -39,13 +39,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/inp_Year_ContentPromo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
                     android:gravity="right"
                     android:text="2024"
                     android:textAlignment="viewStart"
