--- a/app/src/main/res/layout/dialog_delete_warning.xml
+++ b/app/src/main/res/layout/dialog_delete_warning.xml
@@ -23,20 +23,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_Cancel_Warning"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/out_NameContent_Warning">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inp_Nom_Promo"
-            style="@style/EditTextStyle1"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:gravity="top"
-            android:hint="Name"
-            android:inputType="text"
-            android:lines="5"
-            android:textSize="18sp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/out_NameContent_Warning"/>
 
     <Button
         android:id="@+id/btn_Cancel_Warning"
@@ -57,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:text="Ajoute"
+        android:text="Delete"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -68,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Add Promo"
+        android:text="Delete"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
