--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+
+        <item name="android:navigationBarColor">@color/white</item>
     </style>
+    <style name="ButtonStyle1" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">#0091EA</item>
+    </style>
+
     <style name="EditTextStyle1" parent="Widget.MaterialComponents.TextView">
         <item name="android:textColorHint">#FF4A4650</item>
         <item name="android:textColor">#000000</item>
