Correct les Error et ajout dialog_AddPromo

--- a/app/src/main/res/layout/activity_all_groups.xml
+++ b/app/src/main/res/layout/activity_all_groups.xml
@@ -8,19 +8,41 @@
     android:background="#FFFFFF"
     android:clickable="false">
 
-    <Button
-        android:id="@+id/btn_ImportExcel_Group"
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bordaer"
+        android:layout_marginTop="5dp"
+        android:text="Groups"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view"
+        style="@style/line1"
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <Button
+        android:id="@+id/btn_ImportExcel_Group"
+        style="@style/ButtonStyle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:fontFamily="sans-serif-black"
         android:padding="10dp"
         android:text="import Excel"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <ScrollView
         android:layout_width="0dp"
