--- a/app/src/main/res/layout/content_group.xml
+++ b/app/src/main/res/layout/content_group.xml
@@ -37,8 +37,9 @@
             <TextView
                 android:id="@+id/out_NumGroup_ContentGroup"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:fontFamily="serif"
+                android:gravity="center"
                 android:text="Group "
                 android:textAlignment="center"
                 android:textSize="24sp"
@@ -52,9 +53,21 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/out_TypeGroup_ContentGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:text="TD/TP"
+                    android:textAlignment="center"
+                    android:textColor="#7A7A7A"
+                    android:textSize="12sp"
+                    android:typeface="normal" />
 
                 <TextView
                     android:id="@+id/out_NumSession_ContentGroup"
